--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,29 @@
-http {
-    server {
-          listen 80;
+server {
+    server_name auth.mysibsau.ru;
 
-          server_name auth.mysibsau.ru;
-
-          location / {
-                proxy_set_header Host $host;
-                proxy_pass http://auth_service;
-          }
+    location / {
+        resolver 127.0.0.11;
+        set $project http://auth_service;
+        proxy_pass $project;
     }
+}
 
-    server {
-          listen 80;
+server {
+      server_name booking_classroom_backend.mysibsau.ru;
 
-          server_name booking_classroom_backend.mysibsau.ru;
-
-          location / {
-                proxy_set_header Host $host;
-                proxy_pass http://booking_classroom_backend;
-          }
+    location / {
+        resolver 127.0.0.11;
+        set $project http://booking_classroom_backend;
+        proxy_pass $project;
     }
+}
 
-    server {
-          listen 80;
+server {
+      server_name booking_classroom.mysibsau.ru;
 
-          server_name booking_classroom.mysibsau.ru;
-
-          location / {
-                proxy_set_header Host $host;
-                proxy_pass http://booking_classroom_frontend;
-          }
+    location / {
+        resolver 127.0.0.11;
+        set $project http://booking_classroom_frontend;
+        proxy_pass $project;
     }
 }
