--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server {
     server_name auth.mysibsau.ru;
 
     location / {
+        proxy_set_header Host $host;
         resolver 127.0.0.11;
         set $project http://auth_service;
         proxy_pass $project;
@@ -9,9 +10,10 @@ server {
 }
 
 server {
-      server_name booking_classroom_backend.mysibsau.ru;
+    server_name booking_classroom_backend.mysibsau.ru;
 
     location / {
+        proxy_set_header Host $host;
         resolver 127.0.0.11;
         set $project http://booking_classroom_backend;
         proxy_pass $project;
@@ -19,9 +21,10 @@ server {
 }
 
 server {
-      server_name booking_classroom.mysibsau.ru;
+    server_name booking_classroom.mysibsau.ru;
 
     location / {
+        proxy_set_header Host $host;
         resolver 127.0.0.11;
         set $project http://booking_classroom_frontend;
         proxy_pass $project;
