--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
 }
 
 server {
-    server_name booking_classroom_backend.mysibsau.ru;
+    server_name booking-classroom-backend.mysibsau.ru;
 
     location / {
         proxy_set_header Host $host;
@@ -21,7 +21,7 @@ server {
 }
 
 server {
-    server_name booking_classroom.mysibsau.ru;
+    server_name booking-classroom.mysibsau.ru;
 
     location / {
         proxy_set_header Host $host;
