--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,23 @@ version: "3.8"
 
 services:
   nginx:
-    image: nginx:1.23-alpine
+    image: caddy:2-alpine
+    container_name: caddy
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
     networks:
       - mysibsau
       - default
+
+volumes:
+  caddy_data:
+  caddy_config: 
 
 networks:
   mysibsau:
